# reconfit_svd

./: .gitignore  Doxyfile  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile  Makefile.am  Makefile.in  SVD_viewer.pl  Z_histogram.pl  Z_multiplot_SVD.pl  bitwise_check_to_variational_fitter.pl  colorvec_db_reader.cc  colorvec_db_reader.h  correlator_reader.h  correlator_reader_factory.cc  correlator_reader_factory.h  correlator_util.cc  correlator_util.h  dispersion_fit.cc  eff_mass_from_proj_ops.cc  effective_mass_onecorr.cc  ensem_data.cc  ensem_data.h  fit_Z_const_and_exp.cc  fit_corr_cosh.cc  fit_corr_cosh_and_const.cc  fit_corr_exp.cc  fit_corr_exp_and_const.cc  fit_correlators.cc  fit_correlators.h  fit_forms.cc  fit_forms.h  fit_multiple_princorrs.cc  fit_prin_corr.cc  generate_ensem.cc  gnuplot-4.6-Zhistogram.pl  gnuplot-4.7-Zhistogram.pl  jackknife_fitter.cc  jackknife_fitter.h  jackknife_linear_fitter.cc  jackknife_linear_fitter.h  linear_algebra.cc  linear_algebra.h  linear_sum_of_exp_fitter.cc  (+48 more)
src/do_not_use/: semble_load_correlators.cc  semble_load_correlators.h
